Fixes overflows, and tooltips. Edits download/upload arrows

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -23,6 +23,7 @@ body {
     -o-font-feature-settings: "kern" 1;
     font-feature-settings: "kern" 1;
     font-kerning: normal;
+    overflow-x: hidden;
 }
 
 
